syntax = "proto3";

option java_multiple_files = true;

package encube.assignment.events;

import "google/protobuf/timestamp.proto";
import "domain.proto";

message Subject {
  string type = 1;
  string id = 2;
}

message Header {
  string eventId = 1;
  Subject subject = 2;
  google.protobuf.Timestamp timestamp = 3;
}

enum ChangeType {
  CHANGE_TYPE_UNDEFINED = 0;
  CHANGE_TYPE_CREATED = 1;
  CHANGE_TYPE_UPDATED = 2;
  CHANGE_TYPE_DELETED = 3;
}

message FileDescriptorChangedEvent {
  Header header = 1;
  ChangeType changeType = 2;
  encube.assignment.domain.FileDescriptor oldValue = 3;
  encube.assignment.domain.FileDescriptor newValue = 4;
}

message WebSocketConnectionChangedEvent {
  Header header = 1;
  ChangeType changeType = 2;
  encube.assignment.domain.WebSocketConnection oldValue = 3;
  encube.assignment.domain.WebSocketConnection newValue = 4;
}

message WebSocketMessageReceivedEvent {
  Header header = 1;
  encube.assignment.domain.WebSocketConnection connection = 2;
  oneof message {
    string textMessage = 3;
  }
}

message CanvasChangedEvent {
  Header header = 1;
  ChangeType changeType = 2;
  encube.assignment.domain.Canvas oldValue = 3;
  encube.assignment.domain.Canvas newValue = 4;
}